[B]0.8.5[/B]
- Removed shda and implement simpler protocol to prevent port termination error on external deployment
- Implemented mux to select correct app in gshApps

[B]0.8.1[/B]
- Fix bug in server connection on external deployment
- Add terminate to close port for external deployment

[B]0.8.0[/B]
- First working Beta release. All functions should work but aren't tested in detail yet
- Extended features and manual to be done